fix(devloop): address Sonar findings and cover Maven goal launch